# python-protobuf-relocate

./: .editorconfig  .gitignore  README.md  pyproject.toml  tox.toml
.github/workflows/: check.yml
src/protobuf_relocate/: command.py
tests/: test_version.py
