[project]
name = "protobuf-relocate"
dynamic = ["version"]
description = "Relocate the *_pb2.py files to correct package."
authors = [
    {name = "Jiangge Zhang", email = "tonyseek@gmail.com"},
]
dependencies = [
    "click>=8.1.7",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
python-protobuf-relocate = "protobuf_relocate.command:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[tool.pdm.version]
source = "scm"
write_to = "protobuf_relocate/_version.py"
write_template = """
VERSION = "{}"
"""

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
    "flake8>=7.1.1",
    "pytest-cov>=5.0.0",
    "packaging>=24.1",
]

[tool.pdm.scripts]
test = "pytest --cov=src {args}"
lint = "flake8 src"
